# rl-test-flow-optimization

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INTERVIEW_GUIDE.md  MERMAID.md  MODEL_CARD.md  README.md  RL_CONCEPTS.md  docker-compose.yml  generate_test_data.py  pyproject.toml  requirements.txt  rl_test_flow_optimization.ipynb
.github/workflows/: ci.yml
data/: chip_test_data.csv  summary.json  test_config.json  test_history.csv
data/results/: stage1_results.json
notebooks/: build_nb1.py  build_nb2.py  build_nb3.py  fork-of-train-rl-kaggle.ipynb  train-rl-kaggle-nb1_part1.ipynb  train_rl_kaggle.ipynb  train_rl_kaggle_nb1.ipynb  train_rl_kaggle_nb2.ipynb  train_rl_kaggle_nb3.ipynb
reports/: comprehensive_summary.csv
src/: agent.py  api.py  cli.py  environment.py
tests/: test_data.py  test_environment.py
