[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rl-test-flow-optimization"
version = "2.0.0"
description = "Reinforcement Learning for Semiconductor Test Flow Optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "sb3-contrib>=2.2",
    "torch>=2.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "mlflow>=2.10",
    "optuna>=3.5",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.2",
    "black>=24.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
